fix(index.njk): change text

--- a/content/index.njk
+++ b/content/index.njk
@@ -32,7 +32,7 @@ numberOfLatestPostsToShow: 3
 	and protect players from griefing. Also we have plugins
 	that helps maintain server stability and reduce lags.
 	Our first rule regarding plugins - keep classic gameplay.
-	So here will never plugins that change vanilla Minecraft gameplay.
+	So here will never be plugins that change vanilla Minecraft gameplay.
 </p>
 
 <h3>Whitelist</h3>
