fix(index.njk): change h1 text

--- a/content/index.njk
+++ b/content/index.njk
@@ -62,7 +62,7 @@ numberOfLatestPostsToShow: 3
 
 {% set postsCount = collections.posts | length %}
 {% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
-<h1>Latests news:</h1>
+<h1>Latests posts:</h1>
 
 {% set postslist = collections.posts | head(-1 * numberOfLatestPostsToShow) %}
 {% set postslistCounter = postsCount %}
