feat: add map page, update text and contacts

--- a/content/index.njk
+++ b/content/index.njk
@@ -60,6 +60,13 @@ numberOfLatestPostsToShow: 3
 	Check it out and feel free to contribute!
 </p>
 
+<h3>Map</h3>
+<p>
+	We have dynmap plugin installed.
+	So you can view world map in live! <br>
+	Check it out here: <a href="/map/">map.</a>
+</p>
+
 {% set postsCount = collections.posts | length %}
 {% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
 <h1>Latests posts:</h1>
