feat(layouts): change map.njk to redirect layout

--- a/content/map.njk
+++ b/content/map.njk
@@ -1,5 +1,7 @@
 ---
-layout: layouts/map.njk
+layout: layouts/redirect.njk
+title: Betaheads dynmap
+redirectUrl: http://mc.betaheads.net:25575/
 eleventyNavigation:
   key: Map
   order: 4
