--- a/_includes/layouts/redirect.njk
+++ b/_includes/layouts/redirect.njk
@@ -12,7 +12,7 @@
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/png"/>
 
-    <meta http-equiv="Refresh" content="0; url='{{ metadata.dynmapUrl }}'" />
+    <meta http-equiv="Refresh" content="0; url='{{ redirectUrl }}'" />
   </head>
   <body></body>
 </html>
