feat: add how to connect to main page

--- a/content/index.njk
+++ b/content/index.njk
@@ -54,6 +54,11 @@ numberOfLatestPostsToShow: 3
 	Please read before joining the server.
 </p>
 
+<h3>How to connect</h3>
+<p>
+	If you have troubles with connection to the server check this tutorial: <b><a href="/blog/info/how-to-connect">How to connect.</a></b>
+</p>
+
 <h3>Wiki</h3>
 <p>
 	Also we have  <a href="https://betaheads.miraheze.org/wiki/Main_Page">wiki.</a>
