feat: add info about premium accounts

--- a/content/index.njk
+++ b/content/index.njk
@@ -56,6 +56,7 @@ numberOfLatestPostsToShow: 3
 
 <h3>How to connect</h3>
 <p>
+	Server using online mode this means you need official account to play this server.
 	If you have troubles with connection to the server check this tutorial: <b><a href="/blog/info/how-to-connect">How to connect.</a></b>
 </p>
 
