index.njk: add info about discord in whitelist section

--- a/content/index.njk
+++ b/content/index.njk
@@ -44,6 +44,8 @@ numberOfLatestPostsToShow: 3
 
 	After filling out, within some time your application will be processed
 	and you will be added to the server’s white list.
+
+	Also don't forget to join our <a href="https://discord.com/invite/cFjqQqg7Hv">discord!</a>
 	<br>Our form: <a href="https://forms.gle/UzLmvb49xCwuWkXh7">link to form</a>.
 </p>
 
