add text to main page

--- a/content/index.njk
+++ b/content/index.njk
@@ -46,6 +46,7 @@ numberOfLatestPostsToShow: 3
 	and you will be added to the server’s white list.
 
 	Also don't forget to join our <a href="https://discord.com/invite/cFjqQqg7Hv">discord!</a>
+	This is required to be added to the white list.
 	<br>Our form: <a href="https://forms.gle/UzLmvb49xCwuWkXh7">link to form</a>.
 </p>
 
