add wiki page, change order of nav

--- a/content/index.njk
+++ b/content/index.njk
@@ -1,8 +1,5 @@
 ---
 layout: layouts/home.njk
-eleventyNavigation:
-  key: Main
-  order: 1
 numberOfLatestPostsToShow: 3
 ---
 <style>
@@ -65,7 +62,7 @@ numberOfLatestPostsToShow: 3
 
 <h3>Wiki</h3>
 <p>
-	Also we have  <a href="https://betaheads.miraheze.org/wiki/Main_Page">wiki.</a>
+	Also we have <a href="https://betaheads.net/wiki">wiki.</a>
 	Check it out and feel free to contribute!
 </p>
 
