add tag list to /blog, dynamic year

--- a/content/tags-list.njk
+++ b/content/tags-list.njk
@@ -10,3 +10,5 @@ layout: layouts/home.njk
 	<li><a href="{{ tagUrl }}" class="post-tag">{{ tag }}</a></li>
 {% endfor %}
 </ul>
+
+{# Deprecated!!! used blog.njk to show tag list #}
