--- a/content/blog.njk
+++ b/content/blog.njk
@@ -6,7 +6,14 @@ eleventyNavigation:
 ---
 <h1>Archive</h1>
 
-by <a href="/tags/">tags</a>
+<h1>Tags:</h1>
+
+<ul>
+{% for tag in collections.all | getAllTags | filterTagList %}
+	{% set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
+	<li><a href="{{ tagUrl }}" class="post-tag">{{ tag }}</a></li>
+{% endfor %}
+</ul>
 
 <h1>Full archive:</h1>
 
