--- a/content/tags.njk
+++ b/content/tags.njk
@@ -19,4 +19,4 @@ permalink: /tags/{{ tag | slugify }}/
 {% set postslist = collections[ tag ] %}
 {% include "postslist.njk" %}
 
-<p>go to <a href="/tags/">all tags</a>.</p>
+<p>go to <a href="/blog/">full archive</a>.</p>
