--- a/content/index.njk
+++ b/content/index.njk
@@ -25,11 +25,18 @@ numberOfLatestPostsToShow: 3
 <h3>Plugins</h3>
 <p>
 	There is minimum number of plugins - no claims, no teleports.
-	Plugins that we use are needed to make easier communication between players
-	and protect players from griefing. Also we have plugins
-	that helps maintain server stability and reduce lags.
+
 	Our first rule regarding plugins - keep classic gameplay.
 	So here will never be plugins that change vanilla Minecraft gameplay.
+
+	List of plugin categories that we use:
+	<ul>
+	  <li>Chat plugins</li>
+	  <li>Anti-griefing</li>
+	  <li>Server stability / lag reducers plugins</li>
+		<li>Web map</li>
+		<li>Statistic</li>
+	</ul>
 </p>
 
 <h3>Whitelist</h3>
