--- a/content/index.njk
+++ b/content/index.njk
@@ -28,12 +28,13 @@ numberOfLatestPostsToShow: 3
 
 	Our first rule regarding plugins - keep classic gameplay.
 	So here will never be plugins that change vanilla Minecraft gameplay.
-
+</p>
+<p>
 	List of plugin categories that we use:
 	<ul>
 	  <li>Chat plugins</li>
 	  <li>Anti-griefing</li>
-	  <li>Server stability / lag reducers plugins</li>
+	  <li>Server stability / lag reduce plugins</li>
 		<li>Web map</li>
 		<li>Statistic</li>
 	</ul>
