--- a/content/map.njk
+++ b/content/map.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/redirect.njk
 title: Betaheads dynmap
-redirectUrl: http://mc.betaheads.net:25575/
+redirectUrl: https://betaheads.dynmap.xyz/
 eleventyNavigation:
   key: Map
   order: 4
