fix: main page map link

--- a/content/index.njk
+++ b/content/index.njk
@@ -78,7 +78,7 @@ numberOfLatestPostsToShow: 3
 <p>
 	We have dynmap plugin installed.
 	So you can view world map in live! <br>
-	Check it out here: <a href="/map/">map.</a>
+	Check it out here: <a href="/dynmap/">map.</a>
 </p>
 
 {% set postsCount = collections.posts | length %}
